Fix right-side whitespace issue on iOS

--- a/css/screen.css
+++ b/css/screen.css
@@ -9,6 +9,15 @@
 }
 */
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 .table.monos tbody tr td:nth-child(even) {
     font-family: "Lucida Console", Monaco, monospace;
     background: #eeeeee;
